--- a/src/res/locales/app.gl-ES.po
+++ b/src/res/locales/app.gl-ES.po
@@ -1,42 +1,42 @@
 #: Close
 msgid "close"
-msgstr "Fechar"
+msgstr "Pechar"
 
 #: Connect
 msgid "connect"
-msgstr "Ligar"
+msgstr "Conectar"
 
 #: Connecting...
 msgid "connecting"
-msgstr "A ligar..."
+msgstr "Conectando..."
 
 #: Connected
 msgid "connected"
-msgstr "Ligado"
+msgstr "Conectado"
 
 #: Settings
 msgid "settings"
-msgstr "Definições"
+msgstr "Axustes"
 
 #: Banned
 msgid "banned"
-msgstr "Utilizadores banidos"
+msgstr "Usuarios baneados"
 
 #: Notifications
 msgid "notifications"
-msgstr "Notificações"
+msgstr "Notificacións"
 
 #: Username
 msgid "username"
-msgstr "Nome de utilizador"
+msgstr "Nome de usuario"
 
 #: Password
 msgid "password"
-msgstr "Palavra-passe"
+msgstr "Contrasinal"
 
 #: I have a password
 msgid "password_have"
-msgstr "Eu tenho uma palavra-passe"
+msgstr "Teño contrasinal"
 
 #: Server
 msgid "server"
@@ -44,11 +44,11 @@ msgstr "Servidor"
 
 #: Nick (Nickname)
 msgid "nick"
-msgstr "Utilizador"
+msgstr "Alcume"
 
 #: Channel
 msgid "channel"
-msgstr "Canal"
+msgstr "Sala"
 
 #: Network
 msgid "network"
@@ -76,27 +76,27 @@ msgstr "Estado"
 
 #: Away status in a users whois
 msgid "whois_status_available"
-msgstr "Está disponível"
+msgstr "Está dispoñible"
 
 #: Send user a message button
 msgid "send_a_message"
-msgstr "Enviar uma mensagem"
+msgstr "Envía unha mensaxe"
 
 #: Show more information
 msgid "more_information"
-msgstr "Mais informação"
+msgstr "Máis información"
 
 #: Ignore user toggle box
 msgid "ignore_user"
-msgstr "Ignorar utilizador"
+msgstr "Ignorar usuario"
 
 #: Channel input box
 msgid "connection_channel"
-msgstr "Canal"
+msgstr "Sala"
 
 #: General Title
 msgid "settings_general"
-msgstr "Geral"
+msgstr "Xeral"
 
 #: Theme Title
 msgid "settings_theme"
@@ -112,11 +112,11 @@ msgstr ""
 
 #: Show autocomplete list
 msgid "settings_show_autocomplete"
-msgstr "Mostrar lista de auto-completação"
+msgstr "Mostrar lista autocompletado"
 
 #: Messages Title
 msgid "settings_messages_title"
-msgstr "Mensagens"
+msgstr "Mensaxes"
 
 #: Show timestamps
 msgid "settings_timestamps"
@@ -124,15 +124,15 @@ msgstr "Mostrar hora"
 
 #: Use 24-hour timestamps
 msgid "settings_24hour_timestamps"
-msgstr "Mostrar hora em formato 24h"
+msgstr "Mostrar hora en formato 24 horas"
 
 #: Show emoticons
 msgid "settings_emoticons"
-msgstr "Mostrar emoticons"
+msgstr "Mostrar emoticonos"
 
 #: Block new Private messages
 msgid "settings_block_private"
-msgstr "Bloquear novas mensagens privadas"
+msgstr "Bloquear novas mensaxes privadas"
 
 #: Messages in scrollback
 msgid "settings_scrollback"
@@ -140,39 +140,39 @@ msgstr ""
 
 #: Extra formatting
 msgid "settings_formatting"
-msgstr "Formatação extra"
+msgstr "Formateado extra"
 
 #: Include join/part messages as activity
 msgid "settings_show_joinpart"
-msgstr "Incluir mensagens de entrada/saída como actividade"
+msgstr "Incluír mensaxes de entrada e saída como actividade"
 
 #: Mute sound notifications
 msgid "settings_mute_sound"
-msgstr "Silenciar notificações"
+msgstr "Silenciar notificacións"
 
 #: Highlight on words
 msgid "settings_highlight"
-msgstr "Palavras a destacar (separadas por espaço)"
+msgstr "Palabras a destacar (sepáraas cun espazo)"
 
 #: Aliases Title
 msgid "settings_aliases"
-msgstr "Aliases"
+msgstr "Alias"
 
 #: Send Message
 msgid "send_message"
-msgstr "Enviar mensagem"
+msgstr "Enviar mensaxe"
 
 #: Notify me when
 msgid "settings_notify"
-msgstr "Notificar-me quando"
+msgstr "Notificarme cando"
 
 #: All messages
 msgid "settings_notify_all"
-msgstr "Todas as mensagens"
+msgstr "Todas as mensaxes"
 
 #: I am mentioned
 msgid "settings_notify_mentioned"
-msgstr "For mencionado"
+msgstr "Fun mencionado"
 
 #: Never
 msgid "settings_notify_never"
@@ -180,27 +180,27 @@ msgstr "Nunca"
 
 #: Mute sounds
 msgid "settings_notify_mute"
-msgstr "Desactivar sons"
+msgstr "Deshabilitar sons"
 
 #: Refresh banlist
 msgid "bans_refresh"
-msgstr "Actualizar lista de bans"
+msgstr "Actualizar lista de baneos"
 
 #: Banned user
 msgid "bans_user"
-msgstr "Utilizador banido"
+msgstr "Usuario baneado"
 
 #: Banned by
 msgid "bans_by"
-msgstr "Banido por"
+msgstr "Baneado por"
 
 #: Refreshing banlist
 msgid "bans_refreshing"
-msgstr "Actualizando lista de bans"
+msgstr "Actualizando lista de baneos"
 
 #: Nobody is banned
 msgid "bans_nobody"
-msgstr "Não existem utilizadores banidos"
+msgstr "Ninguén está baneado"
 
 #: Topic
 msgid "channel_topic"
@@ -208,87 +208,87 @@ msgstr "Tópico"
 
 #: Moderated chat
 msgid "channel_moderated"
-msgstr "Canal moderado"
+msgstr "Sala moderada"
 
 #: Invite Only
 msgid "channel_invite"
-msgstr "Apenas por convite"
+msgstr "Necesítase invitación para entrar"
 
 #: Moderated topic
 msgid "channel_moderated_topic"
-msgstr "Apenas OPs podem alterar o tópico"
+msgstr "Só os moderadores poden cambiar o tópico"
 
 #: Block external messages
 msgid "channel_external"
-msgstr "Bloquear mensagens externas"
+msgstr "Bloquear mensaxes externas"
 
 #: Welcome to Kiwi IRC!
 msgid "container_welcome"
-msgstr "Bem vindos ao Kiwi IRC! Escolha um canal à esquerda."
+msgstr "¡Benvido a Kiwi IRC! Selecciona unha sala da esquerda."
 
 #: Show statebrowser
 msgid "container_statebrowser"
-msgstr "Mostrar statebrowser"
+msgstr "Mostrar barra estado do navegador"
 
 #: Join Channel
 msgid "container_join"
-msgstr "Entrar num canal"
+msgstr "Entrar a unha sala"
 
 #: Not connected
 msgid "container_notconnected"
-msgstr "Não ligado"
+msgstr "Desconectado"
 
 #: Private conversation with
 msgid "container_privmsg"
-msgstr "Conversa privada com {{user}}"
+msgstr "Conversación privada con {{user}}"
 
 #: input wrap placeholder
 msgid "input_placeholder"
-msgstr "Envie uma mensagem..."
+msgstr "Enviar unha mensaxe..."
 
 #: Loading
 msgid "media_loading"
-msgstr "Carregando {{url}}..."
+msgstr "Cargando {{url}}..."
 
 #: Load previous
 msgid "messages_load"
-msgstr "Carregar mensagens anteriores"
+msgstr "Cargar mensaxes anteriores"
 
 #: NetworkSettings $t('settings_')
 msgid "settings_server_details"
-msgstr "Definições de rede"
+msgstr "Detalles do servidor"
 
 #: Port
 msgid "settings_port"
-msgstr "Porta"
+msgstr "Porto"
 
 #: Other networks on this ZNC account
 msgid "settings_znc_other"
-msgstr "Outras redes nesta conta de ZNC aparecerão na lista de redes"
+msgstr "Outras redes nesta conta ZNC serán listadas na lista de redes"
 
 #: Your details
 msgid "settings_your_details"
-msgstr "Os seus detalhes"
+msgstr "Os teus detalles"
 
 #: Nickname
 msgid "settings_nickname"
-msgstr "Nickname"
+msgstr "Alcume"
 
 #: Advanced
 msgid "settings_advanced"
-msgstr "Avançado"
+msgstr "Avanzado"
 
 #: Encoding
 msgid "settings_encoding"
-msgstr "Codificação"
+msgstr "Codificación"
 
 #: Show Raw
 msgid "settings_show_raw"
-msgstr "Mostrar raw"
+msgstr "Mostrar o orixinal"
 
 #: Run commands when connected
 msgid "settings_autorun"
-msgstr "Comandos a executar após ligação"
+msgstr "Executa comandos ao conectar"
 
 #: Danger zone
 msgid "settings_danger"
@@ -296,94 +296,94 @@ msgstr "Zona de perigo"
 
 #: Remove network
 msgid "settings_remove"
-msgstr "Remover rede"
+msgstr "Eliminar rede"
 
 #: Person key
 msgid "person"
-msgstr "{{count}} pessoa aqui"
+msgstr "{{count}} usuario aquí"
 
 #: Person plural key
 msgid "person_plural"
-msgstr "{{count}} pessoas aqui"
+msgstr "{{count}} usuarios aquí"
 
 #: Reconnect Channel
 msgid "reconnect_channel"
-msgstr "Volte a ligar para entrar no {{channel}}"
+msgstr "Reconectar para entrar en {{channel}}"
 
 #: Reconnect to network
 msgid "reconnect_network"
-msgstr "Volte a ligar à rede {{network}} para começar a conversar"
+msgstr "Reconectar a {{network}} para empezar a chatear"
 
 #: Reconnect to query
 msgid "reconnect_query"
-msgstr "Volte a ligar para continuar a conversar com {{user}}"
+msgstr "Reconectar para continuar falando con {{user}}"
 
 #: Connection settings
 msgid "reconnect_settings"
-msgstr "Definições de ligação"
+msgstr "Configuración da conexión"
 
 #: Close options $t('side_')
 msgid "side_close"
-msgstr "Fechar opções"
+msgstr "Pechar opcións"
 
 #: Channel options
 msgid "side_options"
-msgstr "Opções de canal"
+msgstr "Opcións da sala"
 
 #: Your settings
 msgid "side_settings"
-msgstr "As suas definições"
+msgstr "A túa configuración"
 
 #: Show when people join
 msgid "side_joins"
-msgstr "Mostrar quando entram utilizadores"
+msgstr "Mostrar cando a xente entra á sala"
 
 #: Extra message formatting
 msgid "side_formatting"
-msgstr "Formatação extra de mensagens"
+msgstr "Formateo extra das mensaxes"
 
 #: Nick colours in the list"
 msgid "side_colours"
-msgstr "Nomes coloridos na lista de nicks"
+msgstr "Colorear alias na lista"
 
 #: No buffer set
 msgid "side_buffer"
-msgstr "Sem buffer definido"
+msgstr "Non hai buffer configurado"
 
 #: Error starting
 msgid "error_starting"
-msgstr "Houve um erro ao iniciar o Kiwi IRC :("
+msgstr "Houbo un erro iniciando Kiwi IRC :("
 
 msgid "error_installed"
-msgstr "Verifique se instalou o Kiwi IRC correctamente e que o ficheiro de configuração pode ser carregado."
+msgstr "Comproba que instalaches o Kiwi IRC correctamente e que a configuración pode cargarse."
 
 #: Leave
 msgid "state_leave"
-msgstr "Sair do {{name}}"
+msgstr "Saír de {{name}}"
 
 #: Your account
 msgid "state_account"
-msgstr "A sua conta"
+msgstr "A túa conta"
 
 #: Your settings and networks will be remembered on this computer
 msgid "state_remembered"
-msgstr "As suas definições e redes serão guardadas neste computador."
+msgstr "A túa configuración e redes lembraranse neste computador."
 
 #: Forget me
 msgid "state_forget"
-msgstr "Esquecer-me"
+msgstr "Borrar configuración"
 
 #: No networks here yet.
 msgid "state_network"
-msgstr "Sem redes definidas ainda."
+msgstr "Aínda non configuraches ningunha rede."
 
 #: Add one?
 msgid "state_add"
-msgstr "Adicionar uma?"
+msgstr "Queres engadir unha?"
 
 #: Available networks
 msgid "state_available"
-msgstr "Redes disponíveis"
+msgstr "Redes dispoñibles"
 
 #: Configure network
 msgid "state_configure"
@@ -391,15 +391,15 @@ msgstr "Configurar rede"
 
 #: Not connected.
 msgid "state_disconnected"
-msgstr "Não ligado."
+msgstr "Desconectado."
 
 #: Join new #channel
 msgid "state_join"
-msgstr "Entrar num novo #canal"
+msgstr "Entrar nunha #sala nova"
 
 #: Account name
 msgid "user_account"
-msgstr "Nome de conta: {{user}}"
+msgstr "Nome da conta: {{user}}"
 
 #: Real name
 msgid "user_realname"
@@ -407,31 +407,31 @@ msgstr "Nome real: {{realname}}"
 
 #: Is a bot
 msgid "user_bot"
-msgstr "É um bot"
+msgstr "É un robot"
 
 #: Is available for help
 msgid "user_help"
-msgstr "Está disponível para ajudar"
+msgstr "Está dispoñible para axudar"
 
 #: Is an operator
 msgid "user_op"
-msgstr "É um IRCop"
+msgstr "É un operador"
 
 #: Connected to
 msgid "user_server"
-msgstr "Ligado a {{server}} {{info}}"
+msgstr "Conectado a {{server}} {{info}}"
 
 #: Securely connected via SSL/TLS
 msgid "user_secure"
-msgstr "Ligado com segurança através de SSL/TLS"
+msgstr "Conectado de forma segura con SSL/TLS"
 
 #: Also in channels
 msgid "user_channels"
-msgstr "Também nos canais {{channels}}"
+msgstr "Está tamén nas salas {{channels}}"
 
 #: Access level
 msgid "user_access"
-msgstr "Nível de acesso"
+msgstr "Nivel de acceso"
 
 #: Normal
 msgid "user_normal"
@@ -439,11 +439,11 @@ msgstr "Normal"
 
 #: Kick from channel
 msgid "user_kick"
-msgstr "Kickar do canal"
+msgstr "Expulsar da sala"
 
 #: Ban from the channel
 msgid "user_ban"
-msgstr "Banir do canal"
+msgstr "Banear da sala"
 
 #: Kick + Ban from the channel
 msgid "user_kickban"
@@ -451,37 +451,37 @@ msgstr ""
 
 #: Your IRC client
 msgid "personal_client"
-msgstr "O seu cliente de IRC."
+msgstr "O teu cliente de IRC"
 
 #: Add your networks. Join your channels.
 msgid "personal_addjoin"
-msgstr "Adicione as suas redes. Entre nos seus canais."
+msgstr "Engade as túas redes. Entra nas túas salas."
 
 #: They will be here when you come back.
 msgid "personal_return"
-msgstr "Eles estarão aqui quando voltar."
+msgstr "Estarán aquí cando volvas."
 
 #: Add a Network
 msgid "personal_add"
-msgstr "Adicionar uma rede"
+msgstr "Engade unha Rede"
 
 #: Saved networks
 msgid "personal_saved"
-msgstr "Redes guardadas"
+msgstr "Redes gardadas"
 
 #: Kiwi IRC (next gen) - Rizon preview
 msgid "rizon_title"
-msgstr "Kiwi IRC (próxima geração) - Pré-visualização Rizon"
+msgstr "Kiwi IRC (nova xeración) - Previsualización Rizon"
 
 #: Direct websockets. No Kiwi server or webirc involved.
 msgid "rizon_websockets"
-msgstr "Websocket directo. Nenhum servidor Kiwi ou webirc envolvido."
+msgstr "Websocket directo. Sen servidor Kiwi nin webirc."
 
 #: (Thanks to Adam @Rizon for the development websocket server support!)
 msgid "rizon_thanks"
-msgstr "(Obrigado a Adam @Rizon pelo desenvolvimento do suporte a servidor websocket!)"
+msgstr "(Grazas a Adam @Rizon polo desenvolvemento do soporte do websockets!)"
 
 #: Give the developer version of Kiwi IRC a try!
 msgid "rizon_dev"
-msgstr "Dê à versão de desenvolvimento do Kiwi IRC uma tentativa!"
+msgstr "Proba a versión en desenvolvemento do Kiwi IRC!"
 
