--- a/src/res/locales/app.pt-BR.po
+++ b/src/res/locales/app.pt-BR.po
@@ -4,23 +4,23 @@ msgstr "Fechar"
 
 #: Connect
 msgid "connect"
-msgstr "Ligar"
+msgstr "Conectar"
 
 #: Connecting...
 msgid "connecting"
-msgstr "A ligar..."
+msgstr "Conectando..."
 
 #: Connected
 msgid "connected"
-msgstr "Ligado"
+msgstr "Conectado"
 
 #: Settings
 msgid "settings"
-msgstr "Definições"
+msgstr "Configurações"
 
 #: Banned
 msgid "banned"
-msgstr "Utilizadores banidos"
+msgstr "Usuários banidos"
 
 #: Notifications
 msgid "notifications"
@@ -28,15 +28,15 @@ msgstr "Notificações"
 
 #: Username
 msgid "username"
-msgstr "Nome de utilizador"
+msgstr "Nome de usuário"
 
 #: Password
 msgid "password"
-msgstr "Palavra-passe"
+msgstr "Senha"
 
 #: I have a password
 msgid "password_have"
-msgstr "Eu tenho uma palavra-passe"
+msgstr "Tenho senha"
 
 #: Server
 msgid "server"
@@ -44,7 +44,7 @@ msgstr "Servidor"
 
 #: Nick (Nickname)
 msgid "nick"
-msgstr "Utilizador"
+msgstr "Apelido"
 
 #: Channel
 msgid "channel"
@@ -72,7 +72,7 @@ msgstr "Nome real"
 
 #: Away status in a users whois
 msgid "whois_status"
-msgstr "Estado"
+msgstr "Status"
 
 #: Away status in a users whois
 msgid "whois_status_available"
@@ -88,7 +88,7 @@ msgstr "Mais informação"
 
 #: Ignore user toggle box
 msgid "ignore_user"
-msgstr "Ignorar utilizador"
+msgstr "Ignorar usuário"
 
 #: Channel input box
 msgid "connection_channel"
@@ -112,7 +112,7 @@ msgstr ""
 
 #: Show autocomplete list
 msgid "settings_show_autocomplete"
-msgstr "Mostrar lista de auto-completação"
+msgstr "Mostrar lista autocompletar"
 
 #: Messages Title
 msgid "settings_messages_title"
@@ -124,7 +124,7 @@ msgstr "Mostrar hora"
 
 #: Use 24-hour timestamps
 msgid "settings_24hour_timestamps"
-msgstr "Mostrar hora em formato 24h"
+msgstr "Mostrar hora em formato 24 horas"
 
 #: Show emoticons
 msgid "settings_emoticons"
@@ -144,7 +144,7 @@ msgstr "Formatação extra"
 
 #: Include join/part messages as activity
 msgid "settings_show_joinpart"
-msgstr "Incluir mensagens de entrada/saída como actividade"
+msgstr "Incluir mensagens de entrada e saída como atividade"
 
 #: Mute sound notifications
 msgid "settings_mute_sound"
@@ -152,11 +152,11 @@ msgstr "Silenciar notificações"
 
 #: Highlight on words
 msgid "settings_highlight"
-msgstr "Palavras a destacar (separadas por espaço)"
+msgstr "Palavras a destacar (separadas com um espaço)"
 
 #: Aliases Title
 msgid "settings_aliases"
-msgstr "Aliases"
+msgstr "Aliás"
 
 #: Send Message
 msgid "send_message"
@@ -164,7 +164,7 @@ msgstr "Enviar mensagem"
 
 #: Notify me when
 msgid "settings_notify"
-msgstr "Notificar-me quando"
+msgstr "Me notificar quando"
 
 #: All messages
 msgid "settings_notify_all"
@@ -172,7 +172,7 @@ msgstr "Todas as mensagens"
 
 #: I am mentioned
 msgid "settings_notify_mentioned"
-msgstr "For mencionado"
+msgstr "Eu for mencionado"
 
 #: Never
 msgid "settings_notify_never"
@@ -180,15 +180,15 @@ msgstr "Nunca"
 
 #: Mute sounds
 msgid "settings_notify_mute"
-msgstr "Desactivar sons"
+msgstr "Desativar sons"
 
 #: Refresh banlist
 msgid "bans_refresh"
-msgstr "Actualizar lista de bans"
+msgstr "Atualizar lista de banidos"
 
 #: Banned user
 msgid "bans_user"
-msgstr "Utilizador banido"
+msgstr "Usuário banido"
 
 #: Banned by
 msgid "bans_by"
@@ -196,11 +196,11 @@ msgstr "Banido por"
 
 #: Refreshing banlist
 msgid "bans_refreshing"
-msgstr "Actualizando lista de bans"
+msgstr "Atualizando lista de banidos"
 
 #: Nobody is banned
 msgid "bans_nobody"
-msgstr "Não existem utilizadores banidos"
+msgstr "Ninguém está banido"
 
 #: Topic
 msgid "channel_topic"
@@ -212,11 +212,11 @@ msgstr "Canal moderado"
 
 #: Invite Only
 msgid "channel_invite"
-msgstr "Apenas por convite"
+msgstr "Necessita de convite para entrar"
 
 #: Moderated topic
 msgid "channel_moderated_topic"
-msgstr "Apenas OPs podem alterar o tópico"
+msgstr "Apenas moderadores podem alterar o tópico"
 
 #: Block external messages
 msgid "channel_external"
@@ -224,11 +224,11 @@ msgstr "Bloquear mensagens externas"
 
 #: Welcome to Kiwi IRC!
 msgid "container_welcome"
-msgstr "Bem vindos ao Kiwi IRC! Escolha um canal à esquerda."
+msgstr "Bem-vindos ao Kiwi IRC! Escolha um canal à esquerda."
 
 #: Show statebrowser
 msgid "container_statebrowser"
-msgstr "Mostrar statebrowser"
+msgstr "Mostrar barra estado do navegador"
 
 #: Join Channel
 msgid "container_join"
@@ -236,7 +236,7 @@ msgstr "Entrar num canal"
 
 #: Not connected
 msgid "container_notconnected"
-msgstr "Não ligado"
+msgstr "Desconectado"
 
 #: Private conversation with
 msgid "container_privmsg"
@@ -244,7 +244,7 @@ msgstr "Conversa privada com {{user}}"
 
 #: input wrap placeholder
 msgid "input_placeholder"
-msgstr "Envie uma mensagem..."
+msgstr "Enviar uma mensagem..."
 
 #: Loading
 msgid "media_loading"
@@ -256,7 +256,7 @@ msgstr "Carregar mensagens anteriores"
 
 #: NetworkSettings $t('settings_')
 msgid "settings_server_details"
-msgstr "Definições de rede"
+msgstr "Definições do servidor"
 
 #: Port
 msgid "settings_port"
@@ -264,15 +264,15 @@ msgstr "Porta"
 
 #: Other networks on this ZNC account
 msgid "settings_znc_other"
-msgstr "Outras redes nesta conta de ZNC aparecerão na lista de redes"
+msgstr "Outras redes nesta conta ZNC aparecerão na lista de redes"
 
 #: Your details
 msgid "settings_your_details"
-msgstr "Os seus detalhes"
+msgstr "Seus detalhes"
 
 #: Nickname
 msgid "settings_nickname"
-msgstr "Nickname"
+msgstr "Apelido"
 
 #: Advanced
 msgid "settings_advanced"
@@ -284,11 +284,11 @@ msgstr "Codificação"
 
 #: Show Raw
 msgid "settings_show_raw"
-msgstr "Mostrar raw"
+msgstr "Mostrar o original"
 
 #: Run commands when connected
 msgid "settings_autorun"
-msgstr "Comandos a executar após ligação"
+msgstr "Executar comandos ao conectar"
 
 #: Danger zone
 msgid "settings_danger"
@@ -300,27 +300,27 @@ msgstr "Remover rede"
 
 #: Person key
 msgid "person"
-msgstr "{{count}} pessoa aqui"
+msgstr "{{count}} usuário aqui"
 
 #: Person plural key
 msgid "person_plural"
-msgstr "{{count}} pessoas aqui"
+msgstr "{{count}} usuários aqui"
 
 #: Reconnect Channel
 msgid "reconnect_channel"
-msgstr "Volte a ligar para entrar no {{channel}}"
+msgstr "Reconectar para entrar em {{channel}}"
 
 #: Reconnect to network
 msgid "reconnect_network"
-msgstr "Volte a ligar à rede {{network}} para começar a conversar"
+msgstr "Reconectar a {{network}} para começar a conversar"
 
 #: Reconnect to query
 msgid "reconnect_query"
-msgstr "Volte a ligar para continuar a conversar com {{user}}"
+msgstr "Reconectar para continuar falando com {{user}}"
 
 #: Connection settings
 msgid "reconnect_settings"
-msgstr "Definições de ligação"
+msgstr "Configuração da conexão"
 
 #: Close options $t('side_')
 msgid "side_close"
@@ -328,15 +328,15 @@ msgstr "Fechar opções"
 
 #: Channel options
 msgid "side_options"
-msgstr "Opções de canal"
+msgstr "Opções do canal"
 
 #: Your settings
 msgid "side_settings"
-msgstr "As suas definições"
+msgstr "Suas configurações"
 
 #: Show when people join
 msgid "side_joins"
-msgstr "Mostrar quando entram utilizadores"
+msgstr "Mostrar quando usuários entram no canal"
 
 #: Extra message formatting
 msgid "side_formatting"
@@ -344,42 +344,42 @@ msgstr "Formatação extra de mensagens"
 
 #: Nick colours in the list"
 msgid "side_colours"
-msgstr "Nomes coloridos na lista de nicks"
+msgstr "Colorir nomes na lista"
 
 #: No buffer set
 msgid "side_buffer"
-msgstr "Sem buffer definido"
+msgstr "Não há buffer configurado"
 
 #: Error starting
 msgid "error_starting"
 msgstr "Houve um erro ao iniciar o Kiwi IRC :("
 
 msgid "error_installed"
-msgstr "Verifique se instalou o Kiwi IRC correctamente e que o ficheiro de configuração pode ser carregado."
+msgstr "Comprovar que instalou o Kiwi IRC corretamente e que a configuração pode ser carregada."
 
 #: Leave
 msgid "state_leave"
-msgstr "Sair do {{name}}"
+msgstr "Sair de {{name}}"
 
 #: Your account
 msgid "state_account"
-msgstr "A sua conta"
+msgstr "Sua conta"
 
 #: Your settings and networks will be remembered on this computer
 msgid "state_remembered"
-msgstr "As suas definições e redes serão guardadas neste computador."
+msgstr "Suas configurações e redes serão lembradas neste computador."
 
 #: Forget me
 msgid "state_forget"
-msgstr "Esquecer-me"
+msgstr "Apagar configuração"
 
 #: No networks here yet.
 msgid "state_network"
-msgstr "Sem redes definidas ainda."
+msgstr "Nenhuma rede configurada."
 
 #: Add one?
 msgid "state_add"
-msgstr "Adicionar uma?"
+msgstr "Quer adicionar uma?"
 
 #: Available networks
 msgid "state_available"
@@ -391,7 +391,7 @@ msgstr "Configurar rede"
 
 #: Not connected.
 msgid "state_disconnected"
-msgstr "Não ligado."
+msgstr "Desconectado."
 
 #: Join new #channel
 msgid "state_join"
@@ -415,19 +415,19 @@ msgstr "Está disponível para ajudar"
 
 #: Is an operator
 msgid "user_op"
-msgstr "É um IRCop"
+msgstr "É um operador"
 
 #: Connected to
 msgid "user_server"
-msgstr "Ligado a {{server}} {{info}}"
+msgstr "Conectado a {{server}} {{info}}"
 
 #: Securely connected via SSL/TLS
 msgid "user_secure"
-msgstr "Ligado com segurança através de SSL/TLS"
+msgstr "Conectado de forma segura com SSL/TLS"
 
 #: Also in channels
 msgid "user_channels"
-msgstr "Também nos canais {{channels}}"
+msgstr "Está também nos canais {{channels}}"
 
 #: Access level
 msgid "user_access"
@@ -439,7 +439,7 @@ msgstr "Normal"
 
 #: Kick from channel
 msgid "user_kick"
-msgstr "Kickar do canal"
+msgstr "Expulsar do canal"
 
 #: Ban from the channel
 msgid "user_ban"
@@ -451,15 +451,15 @@ msgstr ""
 
 #: Your IRC client
 msgid "personal_client"
-msgstr "O seu cliente de IRC."
+msgstr "Seu cliente de IRC"
 
 #: Add your networks. Join your channels.
 msgid "personal_addjoin"
-msgstr "Adicione as suas redes. Entre nos seus canais."
+msgstr "Adicione suas redes. Entre em seus canais."
 
 #: They will be here when you come back.
 msgid "personal_return"
-msgstr "Eles estarão aqui quando voltar."
+msgstr "Estarão aqui quando voltar."
 
 #: Add a Network
 msgid "personal_add"
@@ -471,17 +471,17 @@ msgstr "Redes guardadas"
 
 #: Kiwi IRC (next gen) - Rizon preview
 msgid "rizon_title"
-msgstr "Kiwi IRC (próxima geração) - Pré-visualização Rizon"
+msgstr "Kiwi IRC (nova geração) - Pré-visualização Rizon"
 
 #: Direct websockets. No Kiwi server or webirc involved.
 msgid "rizon_websockets"
-msgstr "Websocket directo. Nenhum servidor Kiwi ou webirc envolvido."
+msgstr "Websocket direto. Sem servidor Kiwi ou webirc."
 
 #: (Thanks to Adam @Rizon for the development websocket server support!)
 msgid "rizon_thanks"
-msgstr "(Obrigado a Adam @Rizon pelo desenvolvimento do suporte a servidor websocket!)"
+msgstr "(Obrigado a Adam @Rizon pelo desenvolvimento do suporte de servidor websocket!)"
 
 #: Give the developer version of Kiwi IRC a try!
 msgid "rizon_dev"
-msgstr "Dê à versão de desenvolvimento do Kiwi IRC uma tentativa!"
+msgstr "Teste a versão em desenvolvimento do Kiwi IRC!"
 
